...
            app:queryHint="Търсене по име..."
            app:iconifiedByDefault="false"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_contragents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/item_contragent"
        app:layout_constraintTop_toBottomOf="@id/search_card_view"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintTop_toBottomOf="@id/search_card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Няма намерени контрагенти."
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_card_view"
        app:layout_constraintBottom_toBottomOf="parent"
...
